crates/compiler/tests/parse_errors/case_of.elm
module Main exposing (..)

x =
    case y 1 -> 2
